# llm-conversations-viewer

./: README.md  index.html  mkdocs.yml  pyproject.toml
css/: styles.css
docs/: architecture.md  development.md  formats.md  getting-started.md  index.md
js/: app.js  parsers.js
js/ui/: chat-view.js  markdown.js  sidebar.js
js/utils/: export.js  file-handler.js  indexeddb.js  platform-urls.js  storage.js
