[project]
name = "llm-conversations-viewer"
version = "0.1.0"
description = "A viewer for ChatGPT/Claude conversations, 100% client-side only."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material[imaging]>=9.4.0",
]
